# bitbucket_rust

02_programming_guessing_game/guessing_game/: Cargo.toml
20_final_project/hello/: Cargo.toml
doc.rust-lang.org/: doc.txt
explain/closure/: 1.rs  2.rs
explain/mutable_reference/: 1  1.rs  2  2.rs  3  3.rs  note.txt
explain/reference_copy_trait/: 1  1.rs
explain/self_and_Self/: 1  1.rs
rust_by_example/: note.txt
rust_by_example/01_hello_world/: _1_hello_world  _1_hello_world.rs
rust_by_example/02_primitives/: _1_primitive  _1_primitive.rs  _2_literals_operators  _2_literals_operators.rs  _3_tuples  _3_tuples.rs  _4_array_slices  _4_array_slices.rs
rust_by_example/03_custom_types/: _1_structures  _1_structures.rs  _2_enums  _2_enums.rs  _3_use  _3_use.rs  _4_c_like  _4_c_like.rs  _5_test_case_link_list  _5_test_case_link_list.rs  _6_constants  _6_constants.rs
rust_by_example/04_variable_bidings/: _1_bindings  _1_bindings.rs  _2_mutability  _2_mutability.rs  _3_scope_and_shadowing  _3_scope_and_shadowing.rs  _4_declare_first  _4_declare_first.rs  _5_freezing  _5_freezing.rs
rust_by_example/05_types/: _1_casting  _1_casting.rs  _2_literals  _2_literals.rs  _3_inference  _3_inference.rs  _4_aliasing  _4_aliasing.rs
rust_by_example/06_conversion/: _1_from_into  _1_from_into.rs  _2_TryFrom_TryInto  _2_TryFrom_TryInto.rs  _3_to_and_from_strings  _3_to_and_from_strings.rs
rust_by_example/07_expressions/: _1_expresssion  _1_expresssion.rs
rust_by_example/12_cargo/foo/: Cargo.toml
rust_by_example/12_cargo/foo/src/: main.rs
(+795 files in other folders)
